--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,54 @@
+# Secrets and Environment
 .streamlit/secrets.toml
 secrets.toml
 .env
+.env.*
 
+# Python
 __pycache__/
 *.pyc
-
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
 .venv/
+venv/
+ENV/
 
+# IDE
 .DS_Store
 Thumbs.db
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
+# Data files
 *.pdf
+*.csv
+*.xlsx
+
+# Docker
+*.tar.gz
+arisa-internal-tool.tar.gz
+
+# Logs
+*.log
+logs/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+*.pem
