--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+    ports:
+      - "127.0.0.1:3306:3306"
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+    networks:
+      - arisa-network
+    restart: always
+
   streamlit:
     image: arisa-internal-tool:latest
     container_name: arisa-streamlit-prod
@@ -12,6 +26,8 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     restart: always
+    depends_on:
+      - mysql
     networks:
       - arisa-network
 
