chore: 도커 컴포즈 포트 변경 2

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,6 +18,7 @@ services:
   streamlit:
     image: arisa-internal-tool:latest
     container_name: arisa-streamlit-prod
+    command: streamlit run app.py --server.baseUrlPath /boeun
     ports:
       - "127.0.0.1:8501:8501"
     volumes:
